・７コレクション ・linq string

--- a/GoodCode,BadCode/7.コレクション.md
+++ b/GoodCode,BadCode/7.コレクション.md
@@ -1,1 +1,477 @@
 # 7. コレクション ネストを解消する構造化技法
+
+配列やListなどの、コレクションに付きまとう悪魔と対処方法をまとめる。  
+
+---
+---
+
+## 7.1 わざわざ自前でコレクション処理を実装してしまう
+
+次のコードは、ゲームで所持品の中に「牢屋の鍵」があるか調べるコード。  
+for文の中にif文がネストしていて、やや見通しの悪いコードとなっている。  
+
+``` java
+// リスト7.1
+// 「牢屋の鍵」の所持を調べるコード
+
+boolean hasPrisonKey = false;
+// items はList<Item>型
+for (Item each : items) {
+    if (each.name.equals("牢屋の鍵")) {
+        hasPrisonKey = true;
+        break;
+    }
+}
+```
+
+これと同じことは次のコードで実現できる。  
+
+``` java
+// リスト7.2
+// anyMatchメソッド
+
+boolean hasPrisonKey = items.stream().anyMathc(item -> item.name.equals("牢屋の鍵"));
+```
+
+anyMatchメソッドはJavaの標準ライブラリに用意されているコレクション用メソッド。  
+条件を満たす要素がコレクションに1つでも含まれている場合、trueを返す。  
+anyMatchのおかげで、forもifも書かずに、スッキリ1行で書けてしまった。  
+
+このようにanyMatchを知っていれば、複雑なロジックを自前で実装する必要はない。  
+逆に知らなければ、わざわざ自前で実装しなければならず、無駄にロジックが複雑になってしまう。  
+バグを埋め込んでしまう可能性もある。  
+
+---
+
+### 車輪の再発明
+
+すでに広く使われ確立している技術や解決法が存在しているにも関わらず、知らないか、または意図的に無視して、新たに同じようなものを作り出してしまうことを**車輪の再発明**と呼ぶ。  
+anyMatchを使わず、自前で実装してしまう例は、まさに車輪の再発明該当する。  
+
+既に確立している技術を使わないと、新たに作り出す労力や時間が無駄になってしまう。  
+さらに、すでにあるものよりも役に立たないものを作り出すことを**四角い車輪の再発明**と呼ぶ。  
+実績のあるライブラリがすでにあるのに、知らずに自前で実装し、そのつくりが未熟であるためにバグを発生させてしまうケースが実際にある。  
+
+車輪の再発明による弊害を避けるため、サービス開発においては、フレームワークの機能やライブラリを丁寧に調査することが重要となる。  
+一方で、どんな状況でも車輪の再発明がダメだとは言い切れない。  
+ライブラリやフレームワークは高い技術力を持つエンジニアが作り出したもの。  
+ライブラリを組み合わせて実装するだけだと、ライブラリがどんな仕組みで動作しているのか伺い知ることができない。  
+技術力がそこで止まってしまう。  
+動作の仕組みや根拠を理解するのは、技術力を高め、開発を豊かにする。  
+学習目的で、あえて車輪の再発明をやってみるのも一考である。  
+
+---
+---
+
+## 7.2 ループ処理中の条件分岐ネスト
+
+コレクション内で、所定の条件を満たす要素だけに何かの処理をしたい場合がある。  
+
+例えば、RPGでは、毒ダメージを受ける仕様があるとする。  
+メンバー全員の状態を調べ、毒状態の場合、ヒットポイントを減少させるロジックを考えてみる。  
+何も考えずに実装すると次のようになりがちとなるだろう。  
+
+``` java
+// リスト7.3
+// ありがちなネスト構造
+
+for (Member member : members) {
+    if (0 < member.hitPoint) {
+        if (member.containsState(StateType.poison)) {
+            member.hitPoint -= 10;
+            if (member.hitPoint <= 0) {
+                member.hitPoint = 0;
+                member.addState(StateType.dead);
+                member.removeState(StateType.poison);
+            }
+        }
+    }
+}
+```
+
+まず生存しているかを調べる。  
+生存していれば次の毒状態であるかを調べている。  
+毒状態であればヒットポイントを10減少させる。  
+ヒットポイントが0以下になった場合、ヒットポイントを0に補正した上で、戦闘不能にする。  
+これをパーティーメンバー全員に対して処理する。  
+forの中にifが何重にもネストしていて見通しが悪くなっている。  
+
+---
+
+### 7.2.1 早期Continueで条件分岐のネストを解消する
+
+ループ処理中の条件分岐のネストは6.1の早期returnを応用した、**早期Continue**で解決可能。  
+continueは実行中の残り処理をスキップし、次のループ処理へ移行する制御構文。  
+早期returnは「条件を満たさない場合にreturnで抜ける」という手法。  
+この手法を応用して、「条件を満たさない場合にcontinueで次のループ処理に移行する」書き方に変える。  
+
+まず、生存状況を調べるif文を、「生存していなければcontinueで次のループ処理に移行する」形に変更する。  
+他のif文にも早期continueを適応する。  
+
+``` java
+// リスト7.5
+// if文のネストが全て解消された
+
+for (Member member : members) {
+    if (member.hitPoint == 0)  continue;
+    if (!member.containsState(StateType.poison)) continue;
+
+    member.hitPoint -= 10;
+
+    if (0 < member.hitPoint) continue;
+
+    member.hitPoint = 0;
+    member.assState(StateType.dead);
+    member.removeState(StateType.poison);
+}
+```
+
+if文の3重ネストを解消し、見通しが良くなった。  
+どこまで実行されるのかcontinueで区切られており、わかりやすくなっている。  
+
+---
+
+### 7.2.2 早期breakもネスト解消に役立つ
+
+ループ処理の制御構文には、continue以外にもbreakがある。  
+breakは処理を中断し、ループから抜け出す制御構文である。  
+早期continueと同じ発想で、早期breakによりロジックの単純化が可能なパターンがある。  
+
+これもRPGを例に考える。  
+メンバーが連携して一度に攻撃をしかける「連携攻撃」と呼ばれるシステムを想定する。  
+連携攻撃では、攻撃力増幅などの効果がある一方、連携成功条件が厳しく、なかなか成功しないといった特徴があるものとする。  
+この条件のもと、連携攻撃による総ダメージ値の計算を考える。  
+計算は以下の仕様とする。  
+
+- メンバーの先頭から順に連携攻撃の成否を評価する。  
+- 連携に成功した場合  
+  - そのメンバーの攻撃力 * 1.1倍の加算ダメージ値とする。  
+- 連携に失敗した場合  
+  - 以降後続メンバーの連携も評価しない。  
+- 加算ダメージ値が30以上の場合  
+  - 加算ダメージ値を総ダメージ値に加算する。  
+- 加算ダメージ値が30未満の場合  
+  - 連携失敗とみなす。以降後続メンバーの連携も評価しない。  
+
+やや複雑な仕様であるため、よく考えずに実装した場合は次のようになるだろう。  
+
+``` java
+// リスト7.6
+// 複雑にネストした見通しの悪いロジック
+
+int totalDamage = 0;
+for (Member member : members) {
+    if (member.hasTeamAttackSucceeded()) {
+        int damage = (int)(member.attack() * 1.1);
+        if (30 <= damage) {
+            totalDamage += damage;
+        } else {
+            break;
+        }
+    } else {
+        break;
+    }
+}
+```
+
+for文の中にif文がネストしている上にelse句でbreakしており、とても見通しの悪いロジックとなっている。  
+これも早期continueと同様に、今度は早期breakで解消可能である。  
+
+``` java
+// リスト7.7
+// 早期breakで見通し改善
+
+int totalDamage = 0;
+for (Member member : members) {
+    if (!member.hasTeamAttackSucceeded()) break;
+
+    int damage = (int)(member.attack() * 1.1);
+
+    if (damage < 30>) break;
+
+    totalDamage += damage;
+}
+```
+
+---
+---
+
+## 7.3 低凝集なコレクション処理
+
+コレクション処理も低凝集に陥りやすい。  
+RPGのパーティを例に説明する。  
+
+``` java
+// リスト7.8
+// メンバー操作の知識を持つクラス
+
+// フィールドマップ上の制御を担当するクラス
+class FieldManage {
+    // メンバーを追加する
+    void addMember(List<Member> members, Member newMember) {
+        if (membrers.stream().anyMatch(member -> member.id == newMember.id)) {
+            throw new RuntimeException("既にパーティに加わっています。");
+        }
+        if (members.size() == MAX_MEMBER_COUNT) {
+            throw new RuntimeException("これ以上メンバーを追加できません。");
+        }
+
+        member.add(newMember);
+    }
+
+    // パーティメンバーが1人でも生存している場合trueを返す。
+    boolean partyIsAlive(List<Member> members) {
+        return members.stream().anyMatch(member -> member.isAlive());
+    }
+}
+```
+
+FieldManagerはフィールドマップ上の制御を担当するクラス。  
+パーティメンバーを追加するaddMemberメソッドと、パーティメンバーが生存しているかどうかを返すpartyIsAliveメソッドが定義されている。  
+
+ゲーム中、メンバーが追加されるタイミングはフィールドマップ中だけではない。  
+重要イベント中に仲間が追加されるロジックが次のように実装されるかもしれない。  
+
+``` java
+// リスト7.9
+// 別のクラスに実装される重複コード
+
+// ゲーム中の特別イベントを制御するクラス
+class SpecialEventManager {
+    // メンバーを追加する。
+    void addMember(List<Member> members, Member newMember) {
+        member.add(newMember);
+    }
+}
+```
+
+SpecialEventManagerは、ゲーム中の特別イベントを制御するクラス。  
+FieldManagerと同様のメンバー追加メソッドaddMemberが、SpecialEventManagerにも実装されている。  
+重複コードである上に、ガード節がない劣化コピーとなっている。  
+
+FieldManager.partyIsAliveの重複ロジックが別のクラスに実装されてしまう可能性もある。  
+BattleManager.membersAreAliveは、FieldManager.partyIsAliveとは名前も実装も違うが、ロジックの振る舞いは同じである。  
+見かけだけが異なる重複コードとなっている。  
+
+``` java
+// リスト7.10
+// また別の個所にも重複コードが…
+
+// 戦闘を制御するクラス
+class BattleManager {
+    // パーティメンバーが1人でも生存している場合trueを返す。
+    boolean membersAreAlive(List<Member> members) {
+        boolean result = false;
+        for (Member each : members) {
+            if (each.isAlive()) {
+                result = true;
+                break;
+            }
+        }
+        return result;
+    }
+}
+```
+
+このように、コレクションに関する処理は、あちこちに実装されてしまいがちで、低凝集に陥ってしまう。  
+どうすればよいだろうか。  
+
+---
+
+### 7.3.1 コレクション処理をカプセル化する
+
+コレクションの低凝集を解決するのが、**ファーストクラスコレクション**となる。  
+ファーストクラスコレクション(First Class Collection)とは、コレクションに関連するロジックをカプセル化する設計パターンのことである。  
+
+クラスには以下の2つが備わっている必要がある。  
+
+- インスタンス変数  
+- インスタンス変数を不正状態から防御し、正常に操作するメソッド  
+
+ファーストクラスコレクションは、この考え方の応用で、次の要素を備える。  
+
+- コレクション型インスタンス変数  
+- コレクション型インスタンス変数を不正状態から防御し、正常に操作するメソッド  
+
+メンバーのコレクション`List<Member>`をインスタンス変数に持つクラスとして設計する。  
+そして、メンバーの集まりは「パーティー」と呼ばれるので、`List<Member>`を持つクラスをPartyと命名する。  
+
+``` java
+// リスト7.11
+// リスト型をインスタンス変数として持つ
+
+class Party {
+    private final List<Member> members;
+
+    Party() {
+        members = new ArrayList<Member>();
+    }
+}
+```
+
+さらに、インスタンス変数を操作するロジックをこのPartyクラスに移動する。  
+メンバー追加用のaddMemberメソッドを、addメソッドと命名してPartyへ移動する。  
+ただし、そのまま追加すると、membersの要素が変化する副作用が発生する。  
+
+``` java
+// リスト7.12
+// membersの変化は副作用となる
+
+class Party {
+    // 中略
+    void add(final Member newMember) {
+        members.add(newMember);
+    }
+}
+```
+
+副作用を防ぐためにひと手間加える。  
+新しいリストを生成し、そのリストへ追加する作りにする。  
+
+``` java
+// リスト7.13
+// 副作用が生じないメソッド
+
+class Party {
+    // 中略
+    Party add(final Member newMember) {
+        List<Member> adding = new ArrayList<>(members);
+        adding.add(newMember);
+        return new Party(adding);
+    }
+}
+```
+
+これで元のmembersは変化せず、副作用を防げる。  
+そのほか、メンバーが1人でも生存しているか判定するメソッドをisAliveと命名して移動する。  
+また、メンバーを追加可能か調べるロジックをexists,isFullとした。  
+最終的に次のコードとなる。  
+
+``` java
+// リスト7.14
+// リスト操作に必要なロジックを同じクラスに定義
+
+class Party() {
+    static final int MAX_MEMBER_COUNT = 4;
+    private final List<Member> members;
+
+    Party() {
+        members = new ArrayList<Member>();
+    }
+
+    private Party(List<Member> members) {
+        this.members = members;
+    }
+
+    // メンバーを追加する
+    // @param newMember 追加したいメンバー
+    // @return メンバー追加後のパーティ
+    Party add(final Member newMember) {
+        if (exists(newMember)) {
+            throw new RuntimeException("既にパーティに加わっています。");
+        }
+        if (isFull()) {
+            throw new RuntimeException("これ以上メンバーを追加できません。");
+        }
+
+        List<Member> adding = new ArrayList<>(members);
+        adding.add(newMember);
+        return new Party(adding);
+    }
+
+    // @return パーティのメンバーが1人でも生存している場合true
+    boolean isAlive() {
+        return members.stream().anyMatch(each -> each.isAlive());
+    }
+
+    // @param member パーティに所属しているかを調べたいメンバー
+    // @return すでにパーティに所属している場合true
+    boolean exists(final Member member) {
+        return membrers.stream().anyMatch(member -> member.id == newMember.id);
+    }
+
+    // @return パーティーが満員の場合true
+    boolean isFull() {
+        return members.size() == MAX_MEMBER_COUNT;
+    }
+}
+```
+
+``` mermaid
+---
+title: 図7.1 ファーストクラスコレクションで設計したPartyクラス
+---
+classDiagram
+    class Party{
+        Party()
+        - Party(members : List~Member~)
+        add(newMember : Member) Party
+        isAlive() boolean
+        exists(member : Member) boolean
+        isFull() boolean
+    }
+
+    class Member{
+        id : int
+
+        isAlive() boolean
+    }
+
+    Party -->"0..4" Member
+```
+
+コレクションと、コレクションを操作するロジックが、1つのクラスにギュッと凝集する構造になった。  
+
+---
+
+### 7.3.2 外部へ渡す場合はコレクションを変更できなくする
+
+パーティーメンバー全員のステータスを画面表示する場合などは、List\<Member>にアクセスして全体のデータを参照する必要がある。  
+ファーストクラスコレクションとして設計したPartyクラスでメンバー全体を参照したい場合、リスト7.15のようなメソッドを定義してもいいだろうか？  
+
+``` java
+// リスト7.15
+// リスト型をそのまま返すメソッド
+
+class Party {
+    // 中略
+    List<Member> members() {
+        return members;
+    }
+}
+```
+
+インスタンス変数をそのまま外部へ渡すと、Partyクラスの外部でメンバーを追加したり削除したりされてしまう可能性がある。  
+これではPartyクラスで高凝集にしたのに意味がなくなってしまう。(低凝集に逆戻り)  
+
+``` java
+// リスト7.16
+// リストを外部で勝手に操作されてしまう
+
+members = party.members();
+members.add(newMember);
+
+///
+
+members.clear();
+```
+
+外部へ渡す際は、コレクション要素を変更できなくすべし。  
+それにはunmodifiableListメソッドを使用する。  
+
+``` java
+// リスト7.17
+// 外部には不変にして渡す
+
+class Party {
+    // 中略
+
+    // @return メンバーリスト。たたし要素の変更はできません。
+    List<Member> members() {
+        return members.unmodifiableList();
+    }
+}
+```
+
+unmodifiableListで得たコレクションは、要素の追加や削除ができない。  
+Partyクラスの外部で勝手に変更されてしまう心配がなくなる。  
