--- a/GoodCode,BadCode/8.密結合.md
+++ b/GoodCode,BadCode/8.密結合.md
@@ -838,6 +838,19 @@ class MailMagazineServire {
 影響スケッチは神に書いたり図形描画ツールで書いたりもできるが、複雑なソースコードは図に起こすだけでも一苦労になる。  
 ソースコードを解析して影響スケッチを自動で描画してくれるツールには、[Jig](https://github.com/dddjava/jig)などがあるため、うまく活用すべし。  
 
+``` txt
+RegularDiscountedPrice.amount  SummerDiscountedPrice.amount
+           ↑                           ↑
+   RegularDiscountedPrice       SummerDiscountedPrice
+   コンストラクタ               コンストラクタ
+           ｜                           ｜
+           └────┐       ┌────┘
+                     ↓       ↓
+                 RegularPrice.amount
+                         ↑
+              RegularPriceコンストラクタ
+```
+
 ``` mermaid
 requirementDiagram
     requirement RegularDiscountedPrice.amount {
