--- a/GoodCode_BadCode/3.クラス設計.md
+++ b/GoodCode_BadCode/3.クラス設計.md
@@ -100,7 +100,7 @@ A.データクラスの例(1.3)があるから。
 ## 3.2 成熟したクラスへ成長させる設計術
 
 金額を表すMoneyクラスを例に設計方法を見ていく。  
-リスト3.1のMoneyクラスはインスタンス変数しかもっていない、典型的なデータクラス。  
+リスト3.1のMoneyクラスはインスタンス変数しかもっていない、典型的なデータクラスとなる。  
 
 ``` java
 // リスト3.1
@@ -116,7 +116,7 @@ class Money {
 
 ### 3.2.1 コンストラクタで確実に正常値を設定する
 
-データクラスではデフォルトコンストラクタ(引数なしのコンストラクタ)を使ってインスタンスを生成した後に、インスタンス変数に個別に値を代入して初期化するモノでした。  
+データクラスではデフォルトコンストラクタ(引数なしのコンストラクタ)を使ってインスタンスを生成した後に、インスタンス変数に個別に値を代入して初期化するモノだった。  
 これは「生焼けオブジェクト(1.3.5)」であり、未初期化状態を誘発するクラス構造となる。  
 
 生焼けオブジェクトを防ぐには、「クラスのインスタンスを生成する時点で、インスタンス変数に正常値が確実に設定されている状態」にする。  
