--- a/GoodCode_BadCode/5.低凝集.md
+++ b/GoodCode_BadCode/5.低凝集.md
@@ -226,7 +226,7 @@ class Common {
 ECサイトなら注文、予約、配送、どんなユースケースでも必要となる基盤的な処理。  
 
 このように、様々なユースケースに広く横断する事柄を、**横断的関心事**と呼ぶ。  
-代表的なモノとして、以下が上げられる。  
+代表的なモノとして、以下が挙げられる。  
 
 - ログ出力  
 - エラー検出  
