--- a/GoodCode_BadCode/8.密結合.md
+++ b/GoodCode_BadCode/8.密結合.md
@@ -835,7 +835,7 @@ class MailMagazineServire {
 うまく別クラスに分離するには、どのインスタンス変数やメソッドがそれぞれ何に関係付けられているか把握することが大切となる。  
 関係の把握には**影響スケッチ**を使うとわかりやすくなる。(17.1.5 書籍「レガシーコード改善ガイド」参照)
 
-影響スケッチは神に書いたり図形描画ツールで書いたりもできるが、複雑なソースコードは図に起こすだけでも一苦労になる。  
+影響スケッチは紙に書いたり図形描画ツールで書いたりもできるが、複雑なソースコードは図に起こすだけでも一苦労になる。  
 ソースコードを解析して影響スケッチを自動で描画してくれるツールには、[Jig](https://github.com/dddjava/jig)などがあるため、うまく活用すべし。  
 
 ``` txt
