--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -5,6 +5,94 @@
 [分析関数（OVER句,WINDOW句）｜SQL入門](https://excel-ubara.com/vba_sql/vba_SQL023.html)  
 [Window関数のFILTER句を極める](https://masahikosawada.github.io/2018/12/17/Window-Function-Filter-Clause/)  
 
+``` mermaid
+graph TB
+    subgraph aaa
+    botamon(<img src='https://digimon.net/cimages/digimon/botamon.jpg' width='40' height='40' /><br>\u30dc\u30bf\u30e2\u30f3)
+    koromon(<img src='https://digimon.net/cimages/digimon/koromon.jpg' width='40' height='40' /><br>\u30b3\u30ed\u30e2\u30f3)
+    end
+    subgraph bbb
+    agumon(<img src='https://digimon.net/cimages/digimon/agumon.jpg' width='40' height='40' /><br>\u30a2\u30b0\u30e2\u30f3)
+    betamon(<img src='https://digimon.net/cimages/digimon/betamon.jpg' width='40' height='40' /><br>\u30d9\u30bf\u30e2\u30f3)
+    end
+    subgraph ccc
+    greymon-first(<img src='https://digimon.net/cimages/digimon/greymon-first.jpg' width='40' height='40' /><br>\u30b0\u30ec\u30a4\u30e2\u30f3)
+    tyranomon(<img src='https://digimon.net/cimages/digimon/tyranomon.jpg' width='40' height='40' /><br>\u30c6\u30a3\u30e9\u30ce\u30e2\u30f3)
+    devimon(<img src='https://digimon.net/cimages/digimon/devimon.jpg' width='40' height='40' /><br>\u30c7\u30d3\u30e2\u30f3)
+    meramon(<img src='https://digimon.net/cimages/digimon/meramon.jpg' width='40' height='40' /><br>\u30e1\u30e9\u30e2\u30f3)
+    airdramon(<img src='https://digimon.net/cimages/digimon/airdramon.jpg' width='40' height='40' /><br>\u30a8\u30a2\u30c9\u30e9\u30e2\u30f3)
+    seadramon(<img src='https://digimon.net/cimages/digimon/seadramon.jpg' width='40' height='40' /><br>\u30a8\u30a2\u30c9\u30e9\u30e2\u30f3)
+    numemon(<img src='https://digimon.net/cimages/digimon/numemon.jpg' width='40' height='40' /><br>\u30cc\u30e1\u30e2\u30f3)
+    end
+    subgraph ddd
+    metalgreymon-v(<img src='https://digimon.net/cimages/digimon/metalgreymon-v.jpg' width='40' height='40' /><br>\u30e1\u30bf\u30eb\u30b0\u30ec\u30a4\u30e2\u30f3)
+    mamemon(<img src='https://digimon.net/cimages/digimon/mamemon.jpg' width='40' height='40' /><br>\u30de\u30e1\u30e2\u30f3)
+    monzaemon(<img src='https://digimon.net/cimages/digimon/monzaemon.jpg' width='40' height='40' /><br>\u3082\u3093\u3056\u3048\u30e2\u30f3)
+    end
+    botamon-->koromon
+    koromon-->agumon
+    koromon-->betamon
+    agumon-->greymon-first
+    agumon-->tyranomon
+    agumon-->devimon
+    betamon-->devimon
+    agumon-->meramon
+    betamon-->meramon
+    betamon-->airdramon
+    betamon-->seadramon
+    agumon-->numemon
+    betamon-->numemon
+    greymon-first-->metalgreymon-v
+    devimon-->metalgreymon-v
+    airdramon-->metalgreymon-v
+    tyranomon-->mamemon
+    meramon-->mamemon
+    seadramon-->mamemon
+    numemon-->monzaemon
+```
+
+``` mermaid
+flowchart TB
+subgraph aaa
+    direction RL
+    RegularDiscountedPrice.amount
+    SummerDiscountedPrice.amount
+end
+subgraph bbb
+    direction RL
+    RegularDiscountedPriceコンストラクタ
+    SummerDiscountedPriceコンストラクタ
+end
+subgraph ccc
+    RegularPrice.amount
+end
+subgraph ddd
+    RegularPriceコンストラクタ
+end
+
+aaa --> bbb
+bbb --> ccc
+ccc --> ddd
+
+RegularDiscountedPriceコンストラクタ --> RegularDiscountedPrice.amount
+SummerDiscountedPriceコンストラクタ --> SummerDiscountedPrice.amount
+```
+
+RegularDiscountedPriceコンストラクタ --> RegularPrice.amount
+SummerDiscountedPriceコンストラクタ --> RegularPrice.amount
+RegularPriceコンストラクタ --> RegularPrice.amount
+
+``` mermaid
+graph TB
+    aaa ---> bbb ---> ddd & ccc
+    ddd -..-> fff
+
+    ccc --->|eee| fff
+    fff ---> hhh & ggg & kkk
+    hhh --->|iii| mmm
+    ggg & kkk -..-> mmm
+```
+
 ---
 
 ## タスクのキャンセル
