--- a/DB/SQLServer/メモ.md
+++ b/DB/SQLServer/メモ.md
@@ -404,3 +404,27 @@ select * from sys.key_constraints
 ```
 
 [【SQL Server】外部キー制約の一覧を確認する](https://sqlserver.work/2021/01/06/%E3%80%90sys-foreign_keys-%E3%80%91%E5%A4%96%E9%83%A8%E3%82%AD%E3%83%BC%E5%88%B6%E7%B4%84%E3%81%AE%E4%B8%80%E8%A6%A7%E3%82%92%E7%A2%BA%E8%AA%8D%E3%81%99%E3%82%8B/)  
+
+---
+
+## 処理時間を計測する
+
+``` sql
+-- キャッシュを消す
+DBCC DROPCLEANBUFFERS
+DBCC FREEPROCCACHE
+GO
+
+-- キャッシュ消去後数秒待機する
+WAITFOR DELAY '00:00:10'
+
+-- 開始日時を取得する
+DECLARE @STARTDATETIME datetime2 = SYSDATETIME()
+
+-- ここに計測したいSQLを書く
+
+-- 終了日時と開始日時の差から処理時間を取得する
+SELECT DATEDIFF(MILLISECOND, @STARTDATETIME, SYSDATETIME()) AS PROCESSING_TIME_MS
+```
+
+[SQL Serverで処理時間を計測する方法まとめ - Developer Note](https://developer-note.com/sql_server_measure_processing_time/)  
