・参考追加・整理 ・FullOuterJoin

--- a/C#/C#_LInq/メモ.md
+++ b/C#/C#_LInq/メモ.md
@@ -149,25 +149,21 @@ if(x.Items?.Any() != true)
 
 ## 配列の全ての要素が同じであるか判定したい
 
-<https://teratail.com/questions/140064>
-
 ``` C#
 if(rawA.Distinct().Count()==1)
 ```
+
+<https://teratail.com/questions/140064>
 
 ---
 
 ## 重複を確認したい
 
-[【C#】List中の重複する要素を抽出する方法](https://qiita.com/nkojima/items/c927255b8d621d714f0a)  
-[C#, LINQのGroupByで重複した要素と重複した要素が何個あるかを得る](https://hayaup.hatenablog.com/entry/2020/04/16/012501)  
-
-商品台帳の修正中にフロント側で重複のチェックをしたほうがだろうというバグを見つけたので、  
-Linqで重複チェックくらいできるだろう、ということで探したのでまとめ。  
+商品台帳の修正中にフロント側で重複のチェックをしたほうがだろうというバグを見つけたので、Linqで重複チェックくらいできるだろう、ということで探したのでまとめ。  
 Linq万歳。  
 
 ``` C#
-// GroupByしてWhereとやると、まとめた要素がレコードごとにループされるっぽいので、Countってやると、そのまとめた件数が何件あるか取れる。
+// GroupByしてWhereすると、まとめた要素がレコードごとにループされるっぽいので、Countってやると、そのまとめた件数が何件あるか取れる。
 // なので、1レコードが2件以上あるということは、どこかしら重複があると見なせるのでAnyで取得する。
 if (Data.ProductUnitPriceList
         .GroupBy(g => new { g.PrivilegeTypeCD, g.SeasonCD, g.FeeTypeCD, g.UseTimeZoneCD })
@@ -176,11 +172,12 @@ if (Data.ProductUnitPriceList
 if (Data.ProductJanList.GroupBy(g => g.JanCD).Any(w => w.Count() > 1))
 ```
 
+[【C#】List中の重複する要素を抽出する方法](https://qiita.com/nkojima/items/c927255b8d621d714f0a)  
+[C#, LINQのGroupByで重複した要素と重複した要素が何個あるかを得る](https://hayaup.hatenablog.com/entry/2020/04/16/012501)  
+
 ---
 
 ## 指定の要素数で初期化されたListを作成する方法
-
-[C#の配列を同じ値で初期化する](https://www.paveway.info/entry/2019/07/**15_csharp_initarray**)  
 
 検索処理が複雑だったので、1件の時はいつも通りにするけど、2件以上あったら、適当に2件作って、
 フロント側で判断してごにょごにょするって感じで作った。  
@@ -189,6 +186,8 @@ if (Data.ProductJanList.GroupBy(g => g.JanCD).Any(w => w.Count() > 1))
     // List<Product> Count() = 2にする
     Enumerable.Repeat(new Product(), 2).ToList();
 ```
+
+[C#の配列を同じ値で初期化する](https://www.paveway.info/entry/2019/07/**15_csharp_initarray**)  
 
 ---
 
@@ -206,11 +205,10 @@ string.Join(",", TestList.SelectMany(s2 => s2.SlipList.Select(s3 => s3.SubjectCD
 
 ## 遅延実行とIQueryable
 
-[LINQの遅延実行&即時実行とforeach+遅延実行の問題【C#】【LINQ】](https://kan-kikuchi.hatenablog.com/entry/LINQ_Delay)  
+IQueryableのヒントになるかどうか知らないが、[このサイト(LINQの遅延実行&即時実行とforeach+遅延実行の問題【C#】【LINQ】)](https://kan-kikuchi.hatenablog.com/entry/LINQ_Delay)  のある一文がほぼ全てな気がした。  
 
-IQueryableのヒントになるかどうか知らないが、このサイトのある一文がほぼ全てな気がした。  
-`whereは呼び出された時点で処理をして、その結果を返しているわけではなく、どういう処理をするかの命令(クエリ)を返している`  
-つまり`Whereは配列を作ってるわけではなくクエリを作っている`  
+>`whereは呼び出された時点で処理をして、その結果を返しているわけではなく、どういう処理をするかの命令(クエリ)を返している`  
+>つまり`Whereは配列を作ってるわけではなくクエリを作っている`  
 
 IQueryableは外部実行が何たらかんたらって言ってたから、つまりそういうことなのかなーと思ったり。  
 とりあえず、即時実行の動作確認。  
@@ -297,7 +295,7 @@ for (var to = kankaku - 1; to < 150; to += kankaku)
 [【C#】LINQ でコレクションをN個ずつの要素に分割する](https://qiita.com/Nossa/items/db9bff2390291432d138)  
 [連続する数値でグループ分けする](https://noriok.hatenadiary.jp/entry/2015/06/14/122043)  
 [LINQでn個ずつグルーピング](https://ichiroku11.hatenablog.jp/entry/2015/04/16/230309)  
-[[C#][VB] LINQでコレクションをチャンク(N個ずつ)に分割](https://webbibouroku.com/Blog/Article/chunk-linq)  
+[C#,VB LINQでコレクションをチャンク(N個ずつ)に分割](https://webbibouroku.com/Blog/Article/chunk-linq)  
 
 1から100までの連番を生成して、それを指定した要素数の塊にわけて、ループして最小値と最大値を取れば実現できるという寸法。  
 
