・参考追加 ・整理

--- a/Batch/バッチ.md
+++ b/Batch/バッチ.md
@@ -52,3 +52,21 @@ forブロック内では基本的に変数は使えない。
 ○ `!arg!`  
 
 [batファイルでfor文内に変数を利用する場合の罠 | なたで日記](https://blog.natade.net/2018/10/06/windows-bat-%E9%81%85%E5%BB%B6%E7%92%B0%E5%A2%83%E5%A4%89%E6%95%B0-for-if/)  
+
+---
+
+## 新しいターミナルを開いて、exeを実行する
+
+バッチをダブルクリックしたらexeをターミナルを開いた状態で実行したい。  
+
+コンソールアプリのexeはダブルクリックの場合、すぐに閉じてしまうので、ターミナルから実行して常に画面に表示させたい。  
+exeの発行先が別にあるので、exeを発行するバッチの隣に実行バッチを置いて実行したかった。  
+
+``` bat
+@echo off
+
+cd .\Bundle\win\
+call cmd /k "Bundle.exe"
+```
+
+[コマンドプロンプト cmd - [新しいインスタンスを開始する]](https://www.k-tanaka.net/cmd/cmd.php)  
