--- a/DB_SQL/Window/サンプル/メモ.md
+++ b/DB_SQL/Window/サンプル/メモ.md
@@ -3,3 +3,37 @@
 ## 重複レコードの対処
 
 [重複データの抽出／削除をウィンドウ関数で](https://kenpg.bitbucket.io/blog/201607/06.html)  
+
+---
+
+## ウィンドウ関数は、別のウィンドウ関数または集計のコンテキストでは使用できません
+
+`(SELECT Window関数)`で囲めばエラーを回避可能  
+ただ、結果の正当性まで検証はしていない。  
+
+■ **良いパターン**  
+
+``` sql
+SELECT DISTINCT
+    ReservationFrameNo,
+    FIRST_VALUE(
+        (SELECT ROW_NUMBER() OVER(PARTITION BY [ReservationNo] ORDER BY [ReservationFrameNo]))
+    ) OVER (PARTITION BY ReservationFrameNo ORDER BY ReservationNo) AS [Result]
+FROM [TRe_ReservationPlayer]
+```
+
+■ **駄目なパターン**  
+
+``` sql
+/*
+メッセージ 4109、レベル 15、状態 1、行 29
+ウィンドウ関数は、別のウィンドウ関数または集計のコンテキストでは使用できません。
+*/
+
+SELECT DISTINCT
+    ReservationFrameNo,
+    FIRST_VALUE(
+        ROW_NUMBER() OVER(PARTITION BY [ReservationNo] ORDER BY [ReservationFrameNo]
+    ) OVER (PARTITION BY ReservationFrameNo ORDER BY ReservationNo) AS [Result]
+FROM [TRe_ReservationPlayer]
+```
