・参考追加 ・整理

--- a/Batch/バッチ.md
+++ b/Batch/バッチ.md
@@ -55,11 +55,11 @@ forブロック内では基本的に変数は使えない。
 
 ---
 
-## 新しいターミナルを開いて、exeを実行する
+## 新しいターミナルを開いて、コンソールアプリを実行する
 
-バッチをダブルクリックしたらexeをターミナルを開いた状態で実行したい。  
+バッチをダブルクリックしたらコンソールアプリをターミナルを開いた状態で実行したい。  
 
-コンソールアプリのexeはダブルクリックの場合、すぐに閉じてしまうので、ターミナルから実行して常に画面に表示させたい。  
+コンソールアプリのexeはダブルクリックで起動した場合、すぐに閉じてしまうので、コマンドプロンプトからexe名を指定して実行した時のように実行させたい。  
 exeの発行先が別にあるので、exeを発行するバッチの隣に実行バッチを置いて実行したかった。  
 
 ``` bat
